# face_detection

face_detection/: App_cam.py  appsrc.py  capture.py  demo_stream_web.py  main.py  model.py  requirements.txt
src/: README.md
src/gscam/: CMakeLists.txt  package.xml
src/gscam/include/: gst_pipeline.h  utils.h
src/gscam/include/gstcam/: gst_pipeline.h
src/gscam/src/: gst_pipeline.cpp  my_subscriber.cpp  ros_node.cpp  tst.cpp  utils.cpp
