<package>
  <name>gscam</name>
  <version>0.0.0</version>
  <description> Deliver frames from webcam to deep learning model</description>
  <author>Nguyen Hieu</author>
  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
  <license>Apache 2.0</license>

    <buildtool_depend>catkin</buildtool_depend>

      <build_depend>libgstreamer1.0-dev</build_depend>
  <build_depend>libgstreamer-plugins-base1.0-dev</build_depend>


  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>sensor_msgs</build_depend>
    <build_depend>roscpp</build_depend>


  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>sensor_msgs</run_depend>
    <run_depend>roscpp</run_depend>



  <export>
  </export>
</package>

